# meter-emulator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.example.yaml  entrypoint.sh  pyproject.toml  repository.json  repository.yaml
.github/workflows/: docker.yml
meter-emulator/: DOCS.md  config.yaml
meter-emulator/translations/: en.yaml
src/meter_emulator/: config.py  main.py
src/meter_emulator/backends/: __init__.py  base.py  envoy.py
src/meter_emulator/frontends/: __init__.py  base.py  shelly.py
tests/: conftest.py  test_config.py  test_envoy_backend.py  test_shelly_frontend.py
tools/: shelly_client.py
